2011-07-14 Roman
- FIX:UI.WebCfgD: Date and time field's parts size is limited to 30px for 2 symbols.
- SYS: configure.in is improved for disctributive build configuratin, all modules enable on x86_64, ARM and other not x86 architectures,
    by option --enable-ForDist.
- !!:FIX:UI.WebVision: Master page open and replace is fixed. Multiply child's windows open is fixed.
    Child window's header is adapted for long title place.
- UI.WebCfgD: Web-dialogs is realised by flow block on all content.


2011-07-11 Roman
- !!:FIX:SYS: Tasks creation is fixed for check and wait present task for allow. Detected by crash on UI.WebVision.
- FIX:UI.VCAEngine: Close included to Box-widget pages on page close on VCA-engine side is added.
- FIX:UI.Vision, UI.WebVision: Use only enabled and visible Box-widgets for page including.


2011-07-08 Roman
- !!!!:DAQ.JavaLikeCalk: Conditional execution for second argument expression of logical operations ||(OR) and &&(AND) is added.


2011-07-07 Roman
- !!:SYS: ResString is replaced for resource alloc mechanism from RW-lock to mutex for some performance increase
    and memory consumption decrease.


2011-07-05 Roman
- !!!!:UI.Vision: Export to CSV is added to primitives: "Diagram" and "Document".
- SYS.XMLNode: Recursive request all text for node is added to function text().
    Case sensitivity selection is added to attribute's value request function.


2011-07-04 Roman
- SYS.Archive: Some prophylactic code clean.
- UI.Vision: Display number information is added.


2011-07-02 Roman
- FIX:UI.VCAEngine: Link status is fixed for "val:Value var" form.
- FIX:UI.Vision: Group link set error, after presentative attribute rename, is fixed.


2011-06-30 Roman
- DAQ.ModBus: User API function TController::messIO() is added for allow custom ModBus associated requests from the controller
    logical parameter's templates.
- DAQ: User API function TController::alarmSet() is added for unified alarm set to DAQ-object.