@@ -786,6 +786,11 @@ TVariant TBD::objFuncCall( const string &iid, vector<TVariant> &prms, const stri
 	}catch(...){ }
 	return rez;
     }
+
+    //> Config functions call
+    TVariant cfRez = TConfig::objFuncCall(iid, prms, user);
+    if(!cfRez.isNull()) return cfRez;
+
     return TCntrNode::objFuncCall(iid,prms,user);
 }
 
