@@ -1,3 +1,11 @@
+2011-07-15 Roman
+- !!:TConfig, TBD, TTransportIn, TTransportOut, TUser, TGroup, TPrmTmplLib, TPrmTempl, TParamContr, TController, TVArchive, TVArchivator, TMArchivator:
+    User API functions for config access cfg() and cfgSet() is added.
+- TConfig: Generic function get() and set() is added.
+- FIX:Transport.Sockets, Transport.SSL: Input transport hang prevent is added on a socket system problem in function select(), on run.
+- UI.VCAEngine: Text type select for user attributes is added.
+
+
 2011-07-14 Roman
 - FIX:UI.WebCfgD: Date and time field's parts size is limited to 30px for 2 symbols.
 - SYS: configure.in is improved for disctributive build configuratin, all modules enable on x86_64, ARM and other not x86 architectures,
